# Aria

./: .env  .gitignore  .mcp.json  2026-02-10-i-need-to-verify-arias-enterprise-readiness-for-l.txt  CLAUDE.md  DEMO_READINESS_REPORT.md  echo  fix_pydantic_import.py  render.yaml
backend/: .env.example  EMAIL_INTELLIGENCE_VERIFICATION_REPORT.md  check_composio.py  demo_validation.py  echo  extract_episodes.py  extract_episodes_direct.py  extract_facts_direct.py  pyproject.toml  requirements.txt
backend/.claude/: ralph-loop.local.md
backend/core/: model_config.py  task_types.py
backend/docs/: DEMO_READINESS_REPORT.md  EMAIL_INTELLIGENCE_VERIFICATION_REPORT.md  PIPELINE_DIAGNOSTIC_REPORT.md  SAMPLE_DRAFT_ROB.md  TUNED_DRAFT_PROMPT.md
backend/migrations/: 003_surfaced_insights.sql  20260202_create_integrations_table.sql  20260304_add_timezone_to_user_profiles.py  CLAUDE.md
backend/scripts/: apply_domains_migration.py  apply_migration_direct.py  audit_input_validation.py  backfill_clean_signal_summaries.py  backfill_draft_recipient_names.py  backfill_email_intelligence.py  backfill_email_snippets.py  backfill_entity_domains.py  backfill_insight_priority.py  backfill_market_signals.py  backfill_user_replied.py  cleanup_duplicate_drafts.py  cleanup_duplicate_scan_logs.py  pipeline_diagnostic.py  seed_competitor_signals.py  seed_demo_data.py  seed_lead_gen_intelligence.py  seed_roi_data.py  setup_tavus_knowledge_base.py  setup_tavus_persona.py
backend/src/: CLAUDE.md  __init__.py  main.py
backend/tests/: __init__.py  conftest.py  test_account_planning.py  test_action_execution.py  test_budget.py  (+292 more)
(+1654 files in other folders)
